# service-compass

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_checks.sql  0003_docker.sql  0004_notifications.sql  0005_admin_users.sql  0006_docker_monitors.sql  0007_monitor_http_payloads.sql  0008_spaces_and_retention.sql  0009_docker_stable_identity.sql  0010_notification_delivery_history.sql  0011_remove_service_preferred_url_mode.sql  0012_nullable_notification_delivery_channel.sql  0013_maintenance_backup_and_dashboard_refresh.sql  0014_backup_targets_and_runs.sql  0015_monitor_check_retention_cap.sql
backend/src/: access.rs  auth.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  logs.rs  main.rs  state.rs
backend/src/docker/: client.rs  mapper.rs  mod.rs  scanner.rs
backend/src/icon/: favicon.rs  local.rs  mod.rs  selfhst.rs
backend/src/maintenance/: archive.rs  backup.rs  mod.rs  oss.rs  restore.rs
backend/src/models/: docker.rs  group.rs  mod.rs  monitor.rs  notification.rs  service.rs
backend/src/monitor/: cert.rs  dns.rs  docker.rs  history.rs  http.rs  mod.rs  postgres.rs  scheduler.rs  status.rs
backend/src/notify/: bark.rs  dispatcher.rs  mod.rs  synology_chat.rs  webhook.rs
backend/src/routes/: dashboard.rs  docker.rs  groups.rs  icons.rs  logs.rs  maintenance.rs  mod.rs  monitors.rs  notifications.rs  services.rs  settings.rs  version.rs
backend/tests/: api.rs
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  (+3 more)
(+52 files in other folders)
