[package]
name = "service-compass-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "service-compass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bollard = { version = "0.21", features = ["ssl"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
hickory-resolver = "0.26"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "1"
x509-parser = "0.18"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
